--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
+    "effector": "^23.2.3",
+    "effector-react": "^23.2.1",
+    "ramda": "^0.30.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.3.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "sass": "^1.80.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +47,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.14.0",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^8.57.1",
+    "stylelint": "^16.10.0",
+    "stylelint-config-standard": "^36.0.1",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.13.0"
   }
 }
