--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "effector": "^23.2.3",
     "effector-react": "^23.2.1",
     "farfetched": "^1.2.0",
+    "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
